--- a/about/index.html
+++ b/about/index.html
@@ -80,7 +80,9 @@
 
 <p>I am Karthikeyan A K, from Chennai, India. I am a free thinker, like to challenge conventional thinking. I like to enjoy my life.  Enjoyment for me is to eat briyani along with exotic side dishes and to sleep. I don’t do anything else much.</p>
 
-<p>As my profession goes, I am  a Data scientist, I am running my own firm that helps businesses earn more with what they have. I am a Ruby programming Jedi and Ruby on Rails developer. I have written two books on Ruby, those are I love Ruby and Solid Ruby.</p>
+<p>As my profession goes, I am  a Data scientist, I am running my own firm that helps businesses earn more with what they have. I am a Ruby programming Jedi and Ruby on Rails developer. I have written a books on Ruby called <a href="http://i-love-ruby.gitlab.io/">I Love Ruby</a>.</p>
+
+<p>For people who are aspiring to become data scientist can read my book <a href="https://www.amazon.com/dp/B07FYVTNX7">How to become a Data Scientist</a>.</p>
 
 <p>I love Mathematics and machine learning and love to solve puzzles.</p>
 
