--- a/about/index.html
+++ b/about/index.html
@@ -55,7 +55,7 @@
 
 <p>I love Mathematics and machine learning and love to solve puzzles.</p>
 
-<p>You can contact me at +91 8428050777 or mail me mindaslab@gmail.com .</p>
+<p>You can contact me at +91 8428050777 or mail me mindaslab@protonmail.com .</p>
 
   </div>
 
