--- a/about/index.html
+++ b/about/index.html
@@ -126,9 +126,9 @@
 
 <p>Hello People,</p>
 
-<p>I am Karthikeyan A K, from Chennai, India. I am a free thinker, like to challenge conventional thinking. I like to enjoy my life.  Enjoyment for me is to eat biriyani along with exotic side dishes and to sleep. I don’t do anything else much.</p>
+<p>I am Karthikeyan A K, from Chennai, India. I am a free thinker, like to challenge conventional thinking. I like to enjoy my life.  Enjoyment for me is to eat biryani along with exotic side dishes and to sleep. I don’t do anything else much.</p>
 
-<p>As my profession goes, I am a Data Scientist and a Web Developer, I am running my own firm that helps businesses earn more with what they have, I help them market on various web channels to earn more money and devise marketing strategy. I am a Ruby programming Jedi and Ruby on Rails developer. I have written a books on Ruby called <a href="http://i-love-ruby.gitlab.io/">I Love Ruby</a>.</p>
+<p>As my profession goes, I am a Data Scientist and a Web Developer, I am running my own firm that helps businesses earn more with what they have, I help them market on various web channels to earn more money and devise marketing strategy. I am a Ruby programming Jedi and Ruby on Rails developer. I have written a book on Ruby called <a href="http://i-love-ruby.gitlab.io/">I Love Ruby</a>.</p>
 
 <p>For people who are aspiring to become data scientist can read my book <a href="https://www.amazon.com/dp/B07FYVTNX7">How to become a Data Scientist</a>, and am currently writing <a href="https://datascience-book.gitlab.io/">Introduction to DataScience</a>.</p>
 
@@ -136,7 +136,7 @@
 
 <p>I love Mathematics and machine learning and love to solve puzzles.</p>
 
-<p>Currently I am writing a book on <a href="https://clojure-book.gitlab.io/">Clojure</a> and running a youtube channel called <a href="https://www.youtube.com/@clojurediary">Clojure Diary</a> where I blog my experiences.</p>
+<p>Currently, I am writing a book on <a href="https://clojure-book.gitlab.io/">Clojure</a> and running a youtube channel called <a href="https://www.youtube.com/@clojurediary">Clojure Diary</a> where I blog my experiences.</p>
 
 <p>You can contact me at +91 8428050777 (usually WhatsApp or Telegram) or mail me mindaslab@protonmail.com.</p>
 
