--- a/search.html
+++ b/search.html
@@ -147,12 +147,26 @@
       a:hover {
         text-decoration: underline;
       }
+
+      .powered_by {
+        text-align: center;
+        margin-top: 50px;
+      }
+
+      .powered_by img {
+        width: 200px;
+      }
     </style>
   </head>
   <body>
     <h1>URL Search</h1>
-    <input type="text" id="search" placeholder="Enter words to search..." />
+    <input type="text" id="search" placeholder="Enter words to search...">
     <div id="results"></div>
+    <div class="powered_by">
+      <a href="https://yu7.in/sss" />
+        <img src="https://yu7.in/btn-sss" />
+      </a>
+    </div>
 
     <script>
       const data = {
