--- a/search.html
+++ b/search.html
@@ -163,7 +163,7 @@
     <input type="text" id="search" placeholder="Enter words to search...">
     <div id="results"></div>
     <div class="powered_by">
-      <a href="https://yu7.in/sss" />
+      <a href="https://yu7.in/sss" target="_blank" />
         <img src="https://yu7.in/btn-sss" />
       </a>
     </div>
